--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "vite": "^6.2.0",
         "vue": "^3.5.13",
         "vue-imask": "^7.6.1",
+        "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
