--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "date-fns": "^4.1.0",
         "i18n-iso-countries": "^7.14.0",
         "imask": "^7.6.1",
         "laravel-vite-plugin": "^1.0",
